--- a/GeoCalcForiOS/Base.lproj/Main.storyboard
+++ b/GeoCalcForiOS/Base.lproj/Main.storyboard
@@ -238,29 +238,77 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="cellId" textLabel="Qq0-j4-3QS" detailTextLabel="Yi1-BT-649" style="IBUITableViewCellStyleSubtitle" id="TB4-3i-ciz">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationLevel="200" indentationWidth="10" reuseIdentifier="FancyCell" rowHeight="200" id="0Yd-Nv-uuL" customClass="HistoryTableViewCell" customModule="GeoCalcForiOS" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="200"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="TB4-3i-ciz" id="sld-HU-fyh">
-                                    <rect key="frame" x="0.0" y="0.0" width="341" height="43.5"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0Yd-Nv-uuL" id="RDW-zY-smL">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="199.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Qq0-j4-3QS">
-                                            <rect key="frame" x="16" y="5" width="33.5" height="20.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Yi1-BT-649">
-                                            <rect key="frame" x="16" y="25.5" width="44" height="14.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                        <stackView opaque="NO" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="UD4-vb-dFt">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="199"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background1" translatesAutoresizingMaskIntoConstraints="NO" id="J1p-oR-f8T">
+                                                    <rect key="frame" x="0.0" y="0.0" width="187.5" height="199"/>
+                                                </imageView>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background2" translatesAutoresizingMaskIntoConstraints="NO" id="MFU-aw-ZsP">
+                                                    <rect key="frame" x="187.5" y="0.0" width="187.5" height="199"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="MFU-aw-ZsP" firstAttribute="width" secondItem="UD4-vb-dFt" secondAttribute="width" multiplier="1:2" id="pJX-Q6-DLN"/>
+                                                <constraint firstItem="J1p-oR-f8T" firstAttribute="width" secondItem="UD4-vb-dFt" secondAttribute="width" multiplier="1:2" id="w5S-XX-f84"/>
+                                            </constraints>
+                                        </stackView>
+                                        <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OC6-zJ-XDJ">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="199.5"/>
+                                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </view>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Jyh-Tl-szb">
+                                            <rect key="frame" x="127.5" y="59" width="120.5" height="81.5"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Orig Point" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="epP-js-5GO">
+                                                    <rect key="frame" x="0.0" y="0.0" width="120.5" height="30"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dest Point" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mxy-hq-EIG">
+                                                    <rect key="frame" x="0.0" y="30" width="120.5" height="30"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Timestamp" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vwg-pW-dMO">
+                                                    <rect key="frame" x="0.0" y="60" width="120.5" height="21.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="OC6-zJ-XDJ" firstAttribute="width" secondItem="RDW-zY-smL" secondAttribute="width" id="1zd-L0-F6A"/>
+                                        <constraint firstItem="J1p-oR-f8T" firstAttribute="width" secondItem="RDW-zY-smL" secondAttribute="width" multiplier="1:2" id="5EQ-58-0AT"/>
+                                        <constraint firstItem="Jyh-Tl-szb" firstAttribute="centerX" secondItem="RDW-zY-smL" secondAttribute="centerX" id="7pP-3z-9GE"/>
+                                        <constraint firstItem="UD4-vb-dFt" firstAttribute="leading" secondItem="RDW-zY-smL" secondAttribute="leading" id="eQH-zj-Nez"/>
+                                        <constraint firstItem="UD4-vb-dFt" firstAttribute="top" secondItem="RDW-zY-smL" secondAttribute="top" id="eSM-nG-mLA"/>
+                                        <constraint firstItem="OC6-zJ-XDJ" firstAttribute="leading" secondItem="RDW-zY-smL" secondAttribute="leading" id="l2E-gw-Jrn"/>
+                                        <constraint firstItem="OC6-zJ-XDJ" firstAttribute="top" secondItem="RDW-zY-smL" secondAttribute="top" id="mvs-vJ-M20"/>
+                                        <constraint firstItem="Jyh-Tl-szb" firstAttribute="centerY" secondItem="RDW-zY-smL" secondAttribute="centerY" id="snP-ZZ-ym8"/>
+                                        <constraint firstItem="OC6-zJ-XDJ" firstAttribute="height" secondItem="RDW-zY-smL" secondAttribute="height" id="wml-Hc-xOv"/>
+                                        <constraint firstItem="MFU-aw-ZsP" firstAttribute="width" secondItem="RDW-zY-smL" secondAttribute="width" multiplier="1:2" id="zCQ-7r-RNT"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="UD4-vb-dFt" secondAttribute="bottom" constant="1" id="DJ2-aA-62R"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="destPoint" destination="mxy-hq-EIG" id="sBA-YG-Zbz"/>
+                                    <outlet property="origPoint" destination="epP-js-5GO" id="QMT-lk-xXa"/>
+                                    <outlet property="timestamp" destination="Vwg-pW-dMO" id="EbH-UN-y89"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -271,7 +319,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hQA-zl-bjC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="710" y="-110"/>
+            <point key="canvasLocation" x="709.60000000000002" y="-110.19490254872565"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Zyk-dz-fhE">
@@ -292,4 +340,8 @@
             <point key="canvasLocation" x="-1103.2" y="-878.41079460269873"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="background1" width="853" height="853"/>
+        <image name="background2" width="426" height="240"/>
+    </resources>
 </document>
